Fix the settings button on native Mac notifications

An enumeration got updated that has to be duplicated due to
layering reasons, but its peer didn't get updated. This CL
updates the second enumeration and adds static asserts to
make sure that they keep in sync going forward.

Bug: 798262
Change-Id: Ib01d3d0635bed3f7e232e2405e0a6a59f65bf3db
Reviewed-on: https://chromium-review.googlesource.com/893379
Commit-Queue: Peter Beverloo <peter@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533414}
Former-commit-id: 97658ebcea02e8e508a2957012c72fc9ee7bd04c