chrome/browser/ui/cocoa/notifications/notification_response_builder_mac_unittest.mm
@@ -6,11 +6,26 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <AppKit/AppKit.h>
 
 #include "base/mac/scoped_nsobject.h"
+#include "chrome/browser/notifications/notification_common.h"
 #include "chrome/browser/notifications/notification_handler.h"
 #include "chrome/browser/ui/cocoa/notifications/notification_builder_mac.h"
 #include "chrome/browser/ui/cocoa/notifications/notification_constants_mac.h"
 #include "chrome/browser/ui/cocoa/notifications/notification_response_builder_mac.h"
 #include "testing/gtest/include/gtest/gtest.h"
+
+#define STATIC_ASSERT_ENUM(a, b)                            \
+  static_assert(static_cast<int>(a) == static_cast<int>(b), \
+                "mismatching enums: " #a)
+
+STATIC_ASSERT_ENUM(NOTIFICATION_CLICK, NotificationCommon::CLICK);
+STATIC_ASSERT_ENUM(NOTIFICATION_CLOSE, NotificationCommon::CLOSE);
+STATIC_ASSERT_ENUM(NOTIFICATION_DISABLE_PERMISSION,
+                   NotificationCommon::DISABLE_PERMISSION);
+STATIC_ASSERT_ENUM(NOTIFICATION_SETTINGS, NotificationCommon::SETTINGS);
+STATIC_ASSERT_ENUM(NOTIFICATION_OPERATION_MAX,
+                   NotificationCommon::OPERATION_MAX);
+
+#undef STATIC_ASSERT_ENUM
 
 class NotificationResponseBuilderMacTest : public testing::Test {
  protected:
@@ -53,7 +68,7 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationClick) {
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
 
-  EXPECT_EQ(0 /* NOTIFICATION_CLICK */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_CLICK, operation.intValue);
   EXPECT_EQ(notification_constants::kNotificationInvalidButtonIndex,
             buttonIndex.intValue);
 }
@@ -75,7 +90,7 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationSettingsClick) {
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
 
-  EXPECT_EQ(2 /* NOTIFICATION_SETTINGS */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_SETTINGS, operation.intValue);
   EXPECT_EQ(notification_constants::kNotificationInvalidButtonIndex,
             buttonIndex.intValue);
 }
@@ -100,7 +115,7 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationOneActionClick) {
       [response objectForKey:notification_constants::kNotificationOperation];
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
-  EXPECT_EQ(0 /* NOTIFICATION_CLICK */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_CLICK, operation.intValue);
   EXPECT_EQ(0, buttonIndex.intValue);
 }
 
@@ -125,7 +140,7 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationTwoActionClick) {
       [response objectForKey:notification_constants::kNotificationOperation];
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
-  EXPECT_EQ(0 /* NOTIFICATION_CLICK */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_CLICK, operation.intValue);
   EXPECT_EQ(1, buttonIndex.intValue);
 }
 
@@ -153,7 +168,7 @@ TEST_F(NotificationResponseBuilderMacTest,
       [response objectForKey:notification_constants::kNotificationOperation];
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
-  EXPECT_EQ(2 /* NOTIFICATION_SETTINGS */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_SETTINGS, operation.intValue);
   EXPECT_EQ(notification_constants::kNotificationInvalidButtonIndex,
             buttonIndex.intValue);
 }
@@ -175,7 +190,7 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationClose) {
       [response objectForKey:notification_constants::kNotificationOperation];
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
-  EXPECT_EQ(1 /* NOTIFICATION_CLOSE */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_CLOSE, operation.intValue);
   EXPECT_EQ(notification_constants::kNotificationInvalidButtonIndex,
             buttonIndex.intValue);
 }
@@ -202,6 +217,6 @@ TEST_F(NotificationResponseBuilderMacTest, TestNotificationExtension) {
       [response objectForKey:notification_constants::kNotificationOperation];
   NSNumber* buttonIndex =
       [response objectForKey:notification_constants::kNotificationButtonIndex];
-  EXPECT_EQ(0 /* NOTIFICATION_CLICK */, operation.intValue);
+  EXPECT_EQ(NOTIFICATION_CLICK, operation.intValue);
   EXPECT_EQ(1, buttonIndex.intValue);
 }
